--- a/dev/wp-content/themes/leon-art/src/sass/main.scss
+++ b/dev/wp-content/themes/leon-art/src/sass/main.scss
@@ -137,6 +137,8 @@
 @import "components/components.card";
 @import "components/components.footer";
 @import "components/components.nav";
+@import "components/components.header";
+@import "components/components.hamburger";
 
 
 
