--- a/dev/wp-content/themes/leon-art/src/sass/main.scss
+++ b/dev/wp-content/themes/leon-art/src/sass/main.scss
@@ -139,6 +139,8 @@
 @import "components/components.nav";
 @import "components/components.header";
 @import "components/components.hamburger";
+@import "components/components.brand";
+@import "components/components.cta";
 
 
 
