Added cta styles

--- a/dev/wp-content/themes/leon-art/src/sass/components/_components.brand.scss
+++ b/dev/wp-content/themes/leon-art/src/sass/components/_components.brand.scss
@@ -19,6 +19,9 @@
         @include inuit-font-size(24px);
         display: block;
       }
+      &__cta-container {
+        display: flex;
+      }
     }
   }
 }
