Added styles for section titles

--- a/dev/wp-content/themes/leon-art/src/sass/main.scss
+++ b/dev/wp-content/themes/leon-art/src/sass/main.scss
@@ -141,6 +141,8 @@
 @import "components/components.hamburger";
 @import "components/components.brand";
 @import "components/components.cta";
+@import "components/components.main";
+@import "components/components.section";
 
 
 
