--- a/dev/wp-content/themes/leon-art/src/sass/main.scss
+++ b/dev/wp-content/themes/leon-art/src/sass/main.scss
@@ -125,6 +125,7 @@
 @import "../../node_modules/inuitcss/objects/objects.crop";
 @import "../../node_modules/inuitcss/objects/objects.table";
 @import "../../node_modules/inuitcss/objects/objects.pack";
+@import "objects/objects.circle";
 
 
 
@@ -143,6 +144,7 @@
 @import "components/components.cta";
 @import "components/components.main";
 @import "components/components.section";
+@import "components/components.person";
 
 
 
