Switched to bootstrap

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,55 +1,50 @@
-@charset 'utf-8';
+/*!
+ * Bootstrap v4.0.0 (https://getbootstrap.com)
+ * Copyright 2011-2018 The Bootstrap Authors
+ * Copyright 2011-2018 Twitter, Inc.
+ * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
+ */
 
-@import 'settings';
-@import 'foundation';
-@import 'motion-ui';
 
-@include foundation-global-styles;
-//@include foundation-grid;
-// @include foundation-flex-grid;
-@include foundation-xy-grid-classes;
-@include foundation-typography;
-@include foundation-button;
-@include foundation-forms;
-// @include foundation-range-input;
-@include foundation-accordion;
-@include foundation-accordion-menu;
-@include foundation-badge;
-@include foundation-breadcrumbs;
-@include foundation-button-group;
-@include foundation-callout;
-@include foundation-card;
-@include foundation-close-button;
-@include foundation-menu;
-@include foundation-menu-icon;
-@include foundation-drilldown-menu;
-@include foundation-dropdown;
-@include foundation-dropdown-menu;
-@include foundation-responsive-embed;
-@include foundation-label;
-@include foundation-media-object;
-@include foundation-off-canvas;
-@include foundation-orbit;
-@include foundation-pagination;
-@include foundation-progress-bar;
-// @include foundation-progress-element;
-// @include foundation-progress-element;
-// @include foundation-meter-element;
-@include foundation-slider;
-@include foundation-sticky;
-@include foundation-reveal;
-@include foundation-switch;
-@include foundation-table;
-@include foundation-tabs;
-@include foundation-thumbnail;
-@include foundation-title-bar;
-@include foundation-tooltip;
-@include foundation-top-bar;
-@include foundation-visibility-classes;
-// @include foundation-float-classes;
-@include foundation-flex-classes;
+ $theme-colors: (
+  "primary": #821C4A,
+  "secondary": #FEC947
+);
 
-// @include foundation-prototype-classes;
-
-@include motion-ui-transitions;
-@include motion-ui-animations;
+ @import "settings/settings.fonts";
+ @import "../../node_modules/bootstrap/scss/functions";
+ @import "../../node_modules/bootstrap/scss/variables";
+ @import "../../node_modules/bootstrap/scss/mixins";
+ @import "../../node_modules/bootstrap/scss/root";
+ @import "../../node_modules/bootstrap/scss/reboot";
+ @import "../../node_modules/bootstrap/scss/type";
+ @import "../../node_modules/bootstrap/scss/images";
+ @import "../../node_modules/bootstrap/scss/code";
+ @import "../../node_modules/bootstrap/scss/grid";
+ @import "../../node_modules/bootstrap/scss/tables";
+ @import "../../node_modules/bootstrap/scss/forms";
+ @import "../../node_modules/bootstrap/scss/buttons";
+ @import "../../node_modules/bootstrap/scss/transitions";
+ @import "../../node_modules/bootstrap/scss/dropdown";
+ @import "../../node_modules/bootstrap/scss/button-group";
+ @import "../../node_modules/bootstrap/scss/input-group";
+ @import "../../node_modules/bootstrap/scss/custom-forms";
+ @import "../../node_modules/bootstrap/scss/nav";
+ @import "../../node_modules/bootstrap/scss/navbar";
+ @import "../../node_modules/bootstrap/scss/card";
+ @import "../../node_modules/bootstrap/scss/breadcrumb";
+ @import "../../node_modules/bootstrap/scss/pagination";
+ @import "../../node_modules/bootstrap/scss/badge";
+ @import "../../node_modules/bootstrap/scss/jumbotron";
+ @import "../../node_modules/bootstrap/scss/alert";
+ @import "../../node_modules/bootstrap/scss/progress";
+ @import "../../node_modules/bootstrap/scss/media";
+ @import "../../node_modules/bootstrap/scss/list-group";
+ @import "../../node_modules/bootstrap/scss/close";
+ @import "../../node_modules/bootstrap/scss/modal";
+ @import "../../node_modules/bootstrap/scss/tooltip";
+ @import "../../node_modules/bootstrap/scss/popover";
+ @import "../../node_modules/bootstrap/scss/carousel";
+ @import "../../node_modules/bootstrap/scss/utilities";
+ @import "../../node_modules/bootstrap/scss/print";
+ 
