--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -57,6 +57,7 @@ $border-radius-sm: 0;
 @import "components/components.navbar";
 @import "components/components.footer";
 @import "components/components.btn";
+@import "components/components.portrait";
 
 @import "../../node_modules/bootstrap/scss/utilities";
 @import "../../node_modules/bootstrap/scss/print";
