--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -58,6 +58,7 @@ $border-radius-sm: 0;
 @import "components/components.footer";
 @import "components/components.btn";
 @import "components/components.portrait";
+@import "components/components.page-header";
 
 @import "../../node_modules/bootstrap/scss/utilities";
 @import "../../node_modules/bootstrap/scss/print";
