Adding css to artist

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -59,6 +59,8 @@ $border-radius-sm: 0;
 @import "components/components.btn";
 @import "components/components.portrait";
 @import "components/components.page-header";
+@import "components/components.artist";
+@import "components/components.socials";
 
 @import "../../node_modules/bootstrap/scss/utilities";
 @import "../../node_modules/bootstrap/scss/print";
