--- a/src/scss/components/_components.artist.scss
+++ b/src/scss/components/_components.artist.scss
@@ -1,3 +1,8 @@
 .artist {
-    margin-top: 8rem;
+    &__card {
+        margin-top: 8rem;
+    }
+    &__events {
+        margin-top: 5.4rem;
+    }
 }
