--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -61,6 +61,9 @@ $border-radius-sm: 0;
 @import "components/components.page-header";
 @import "components/components.artist";
 @import "components/components.socials";
+@import "components/components.front";
+@import "components/components.about";
+@import "components/components.practical";
 
 @import "../../node_modules/bootstrap/scss/utilities";
 @import "../../node_modules/bootstrap/scss/print";
@@ -82,3 +85,10 @@ $fa-font-path: '../fonts/font-awesome';
 @import 'font-awesome/icons';
 @import 'font-awesome/screen-reader';
  
+body {
+    background-image: url('../img/bcg.jpg'); 
+}
+
+p {
+    max-width: 30em;
+}
