--- a/src/scss/components/_components.header.scss
+++ b/src/scss/components/_components.header.scss
@@ -6,6 +6,10 @@
     }
     &__content {
         color: white;
+        @include media-breakpoint-up(lg) {
+            padding-top: 3rem;
+            padding-bottom: 3rem;
+        }
     }
     &__logo {
         width: 80%;
